--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 .header {
   background-color: rgb(50, 167, 145);
+  color: white;
   display: flex;
+  justify-content: space-between;
 }
 
 .trybewarts-login {
