--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
 }
 
-.trybewarts-login , .coluna1 , .coluna2 {
+.trybewarts-login , .coluna1 , .coluna2 , .coluna5 {
   display: flex;
 }
 
