--- a/style.css
+++ b/style.css
@@ -1,12 +1,40 @@
 .header {
+  align-items: center;
   background-color: rgb(50, 167, 145);
   color: white;
   display: flex;
   justify-content: space-between;
+  padding: 5px 20px;
+}
+
+header img {
+  width: 50px;
 }
 
 .trybewarts-login , .coluna1 , .coluna2 , .coluna5 {
   display: flex;
+}
+
+#fieldEmail , #fieldSenha {
+  border: none;
+  border-radius: 1px 5px;
+  margin-right: 10px;
+  margin-left: 10px;
+  padding: 10px 5px;
+  text-align: center;
+}
+
+#fieldSenha {
+  width: 150px;
+}
+
+#btn-login {
+  background-color: rgb(105, 89, 204);
+  border: none;
+  border-radius: 5px 1px;
+  color: white;
+  font-weight: 900;
+  width: 100px;
 }
 
 .coluna3 {
