--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ header img {
 
 #fieldEmail , #fieldSenha {
   border: none;
-  border-radius: 1px 5px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
   margin-right: 10px;
   margin-left: 10px;
   padding: 10px 5px;
@@ -31,7 +32,8 @@ header img {
 #btn-login {
   background-color: rgb(105, 89, 204);
   border: none;
-  border-radius: 5px 1px;
+  border-top-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   color: white;
   font-weight: 900;
   width: 100px;
